--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,10 +30,11 @@
             android:layout_below="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_above="@+id/navigation_view"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <com.luseen.luseenbottomnavigation.BottomNavigation.BottomNavigationView
-            android:id="@+id/navigation"
+            android:id="@+id/navigation_view"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
