--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,29 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
+    <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <cz.kinst.jakub.view.SimpleStatefulLayout
+            android:id="@+id/stateful_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:emptyLayout="@layout/empty_layout"
+            app:emptyText="No User Selected"
+            app:state="empty"
+            app:stateTextAppearance="@style/TextAppearance.AppCompat">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/history_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </cz.kinst.jakub.view.SimpleStatefulLayout>
+
+
+            <LinearLayout
+                android:id="@+id/sorting_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/material_color_blue_500"
+                android:orientation="vertical"
+                android:visibility="invisible">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                    android:text="Season"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/season_picker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:hint="Select a Season" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                    android:text="Mode"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/mode_picker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:hint="Select a Mode" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
+                    android:text="Region"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/region_picker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:hint="Select a Region" />
+
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/history_sort_submit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:layout_marginBottom="@dimen/material_baseline_grid_1x"
+                    android:layout_marginEnd="@dimen/material_baseline_grid_2x"
+                    android:layout_marginStart="@dimen/material_baseline_grid_2x"
+                    android:text="Submit" />
+
+            </LinearLayout>
+
+    </FrameLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/sort_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
-
-    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-        android:id="@+id/spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <cz.kinst.jakub.view.StatefulLayout
-        android:id="@+id/stateful_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!--Your Content Here-->
-
-    </cz.kinst.jakub.view.StatefulLayout>
-</LinearLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/material_baseline_grid_3x"
+        android:clickable="true"
+        app:backgroundTint="@color/material_color_blue_500"
+        app:borderWidth="0dp"
+        app:elevation="12dp"
+        app:ico_color="@android:color/white"
+        app:ico_icon="gmd-filter-list"
+        app:ico_size="24dp"
+        app:layout_anchorGravity="bottom|right|end"
+        app:pressedTranslationZ="6dp"
+        app:rippleColor="@color/material_color_white_50_percent" />
+</android.support.design.widget.CoordinatorLayout>
