--- a/app/src/main/res/layout/match_layout.xml
+++ b/app/src/main/res/layout/match_layout.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/match_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
-        style="@android:style/Widget.Material.Light.Button.Borderless"
+        android:id="@+id/heading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="@dimen/material_baseline_grid_1x"
         android:layout_marginStart="@dimen/material_baseline_grid_1x"
         android:orientation="vertical"
@@ -35,23 +36,29 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/divider"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
+        android:layout_below="@+id/heading"
         android:layout_marginEnd="@dimen/material_baseline_grid_2x"
         android:layout_marginStart="@dimen/material_baseline_grid_2x"
         android:background="@color/divider" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/top_data"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/divider"
         android:padding="@dimen/material_baseline_grid_1x">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".33"
+            android:id="@+id/result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+            android:layout_marginStart="@dimen/material_baseline_grid_4x"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -62,6 +69,7 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="RESULT"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -72,138 +80,18 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".33"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    style="@style/MaterialTypography.Dense.Caption"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="RATING"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/match_rating"
-                    style="@style/MaterialTypography.Dense.Subheading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="- -"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".33"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    style="@style/MaterialTypography.Dense.Caption"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="KILLS"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/match_kills"
-                    style="@style/MaterialTypography.Dense.Subheading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="- -"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/material_baseline_grid_1x">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".5"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    style="@style/MaterialTypography.Dense.Caption"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="DAMAGE"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/match_damage"
-                    style="@style/MaterialTypography.Dense.Subheading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="- -"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight=".5"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <LinearLayout
+            android:id="@+id/rating"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="@dimen/material_baseline_grid_2x"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -213,7 +101,121 @@
                 android:layout_height="wrap_content"
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="RATING"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/match_rating"
+                style="@style/MaterialTypography.Dense.Subheading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="- -"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/kills"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+            android:layout_marginEnd="@dimen/material_baseline_grid_4x"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/MaterialTypography.Dense.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="KILLS"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/match_kills"
+                style="@style/MaterialTypography.Dense.Subheading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="- -"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/top_data"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="@dimen/material_baseline_grid_1x">
+
+        <LinearLayout
+            android:id="@+id/damage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+            android:layout_marginStart="@dimen/material_baseline_grid_4x"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/MaterialTypography.Dense.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="DAMAGE"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/match_damage"
+                style="@style/MaterialTypography.Dense.Subheading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="- -"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="@dimen/material_baseline_grid_2x"
+            android:gravity="center"
+            android:orientation="vertical">
+
+
+            <TextView
+                style="@style/MaterialTypography.Dense.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="DISTANCE"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
             <TextView
@@ -224,47 +226,43 @@
                 android:paddingEnd="@dimen/material_baseline_grid_1x"
                 android:paddingStart="@dimen/material_baseline_grid_1x"
                 android:text="- -"
+                android:textAlignment="center"
                 android:textStyle="bold" />
 
-
         </LinearLayout>
-    </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="@dimen/material_baseline_grid_2x"
+            android:layout_marginEnd="@dimen/material_baseline_grid_4x"
+            android:layout_marginTop="@dimen/material_baseline_grid_2x"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
+
+            <TextView
+                style="@style/MaterialTypography.Dense.Caption"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="SURVIVED"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-                <TextView
-                    style="@style/MaterialTypography.Dense.Caption"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="SURVIVED"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/match_survived"
+                style="@style/MaterialTypography.Dense.Subheading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/material_baseline_grid_1x"
+                android:paddingStart="@dimen/material_baseline_grid_1x"
+                android:text="- -"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/match_survived"
-                    style="@style/MaterialTypography.Dense.Subheading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingEnd="@dimen/material_baseline_grid_1x"
-                    android:paddingStart="@dimen/material_baseline_grid_1x"
-                    android:text="- -"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
-</LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>
